--- a/main.html
+++ b/main.html
@@ -6,8 +6,16 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color:yellow; text-align:center">
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eum libero temporibus id voluptatum consectetur ea? Provident nostrum repudiandae eligendi dicta, culpa, soluta fugit modi quidem voluptas suscipit veniam alias!</p>
+	</div>
+	<div>
+<h1 id="f2">Roses picture</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eum libero temporibus id voluptatum consectetur ea? Provident nostrum repudiandae eligendi dicta, culpa, soluta fugit modi quidem voluptas suscipit veniam alias!</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
