--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eum libero temporibus id voluptatum consectetur ea? Provident nostrum repudiandae eligendi dicta, culpa, soluta fugit modi quidem voluptas suscipit veniam alias!</p>
 	</div>
 	<div>
-<h1 id="f2">Roses picture</h1>
+<h1 id="f2">Roses pictures</h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eum libero temporibus id voluptatum consectetur ea? Provident nostrum repudiandae eligendi dicta, culpa, soluta fugit modi quidem voluptas suscipit veniam alias!</p>
 	</div>
     <script type="text/javascript" src="./script.js">
